migracion del sitio, controladores, imagenes, css

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,53 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<link rel="stylesheet" href="stylesheets/estilos.css">
+
+<div id="intro" data-speed="4" class="background">
+            <div class="texto">
+                <h1>A PURA VOZ PARRANDA</h1>
+               
+            <img src="images/home/microfono.jpg" alt="foto home">
+        
+            </div>
+        </div>
+        <div class="bloque">
+            <div class="texto">
+                <h2>NUESTRA HISTORIA</h2>
+                
+                <p>Luego de mucha dedicación, a principios del año 2020 logramos conformar el proyecto cultural "A PURA VOZ", 
+                    procurando generar espacios de integración por medio de expresiones culturales (musica, danza, teatro).</p>
+                <p>Gracias a la colaboración y cooperacion de una asociación, 
+                    ASOVEN (Asociacion de Venezolanos en Argentina) 
+                    pudimos llegar a distintos espacios de la ciudad,
+                     asi también pudimos acercarle nuestra cultura y 
+                     nuestras costumbres al resto del pueblo de la Argentina.</p>
+                <p>Hoy por hoy, parte de nuestro sueño se está cumpliendo y estamos creciendo, y eso es gracias a todas las personas que pudieron ayudarnos y apoyarnos.</p>
+            </div>
+        </div>
+        <div id="bloque-img2" data-speed="6" class="">
+            <img src="images/home/guitarra.jpg" alt="foto home">
+        </div>
+        <div class="bloque">
+            <div class="texto">
+                <h2>NUESTRA MISIÓN</h2>
+                <p>Nuestra mision se basa en procurar generar espacios de integración por medio de expresiones artisticas, 
+                    así tambien como poder potenciar la presencia cultural de venezuela. </p>
+                <p> Es muy importante el poder compartir parte de nuestra tierra, asi tambien como poder sentirnos en casa en la Argentina.</p>
+            </div>
+        </div>
+        <div id="bloque-img3" data-speed="6" class="">
+             <img src="images/home/partitura.jpg" alt="foto home">
+        </div>
+        </div>
+        <div class="bloque">
+            <div class="texto">
+                <h2>AGRADECIMIENTOS</h2>
+                <p>Queremos realizar un distinguido agradecimiento a los musicos que nos acompañan siempre, 
+                    nuestros aliados que nos ayudan a poder llevar a cabo todas nuestras tareas,
+                    como lo son ASOVEN y La Parroquia Nuestra Señora de Guadalupe.
+                </p>
+                <p> Y por sobretodo a todo nuestro publico que nos acompaña siempre y nos brinda todo su amor y apoyo.
+                </p>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
