--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,73 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PARRANDA</title>
+    <link rel="shortcut icon" href="images/icons8-musical-64.png" width="90" height="90" color="black">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="fonts/style.css">
+    <link rel="stylesheet" href="stylesheets/estilosnovedades.css">
+    
+   
+   
+
+
+</head>
+
+<body>
   <body>
+    <div class="container-fluid">
+        <!--Comienzo NAVBAR-->
+        <nav class="navbar navbar-expand-md navbar-light border-3 border-bottom border-primary" style="background-color: #0E8EB9;">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="images/icon-musical.png" alt="logo" width="50" height="50" margin="10">PARRANDA</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/">HOME</a>
+                        </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link" href="/novedades">NOVEDADES</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/galeria">GALERIA</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/presentaciones">PRESENTACIONES</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/contacto">CONTACTO</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+</body>
+
     {{{body}}}
+    <footer class="footer">
+        <p>
+            <span class="icon-code"> Diseñado por Gudalupe Tulian</span></p>
+
+        <a href="https://es-la.facebook.com/"><span class="icon-facebook"></span></a>
+
+        </span>
+        <a href="https://instagram.com/apuravozvenar?utm_medium=copy_link"><span class="icon-instagram"></span>
+        </a>
+        <a href="https://www.youtube.com/"> <span class="icon-youtube"></span></a>
+    </footer>
   </body>
 </html>
