--- a/views/contacto.hbs
+++ b/views/contacto.hbs
@@ -2,7 +2,7 @@
  <link rel="stylesheet" href="stylesheets/estiloscontacto.css">
  <link rel="stylesheet" href="stylesheets/estilos.css">
  <body>
-<section class="form-register">
+<section action="/contacto" method="post" class="form-register" >
             <h4>FORMULARIO DE CONTACTO</h4>
             
             
@@ -11,7 +11,7 @@
             <input type="email" class="controls" name="correo" id="correo" placeholder="Ingrese su correo">
             <h4>COMENTARIOS</h4>
 
-            <textarea class="controls" name=" ">
+            <textarea class="controls" name="comentarios">
                 </textarea>
             <input class="enviar" type="submit" value="ENVIAR">
         </section>
