--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -32,20 +32,20 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" href="/">HOME</a>
+                            <a class="nav-link" href="/" class="{{#if isHome}}activo{{/if}}">HOME</a>
                         </li>
                         
                         <li class="nav-item">
-                            <a class="nav-link" href="/novedades">NOVEDADES</a>
+                            <a class="nav-link" href="/novedades"class="{{#if isNovedades}}activo{{/if}}">NOVEDADES</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/galeria">GALERIA</a>
+                            <a class="nav-link" href="/galeria"class="{{#if isGaleria}}activo{{/if}}">GALERIA</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/presentaciones">PRESENTACIONES</a>
+                            <a class="nav-link" href="/presentaciones"class="{{#if isPresentaciones}}activo{{/if}}">PRESENTACIONES</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/contacto">CONTACTO</a>
+                            <a class="nav-link" href="/contacto"class="{{#if isContacto}}activo{{/if}}">CONTACTO</a>
                         </li>
                     </ul>
                 </div>
