instalamos dep mysql, util y md5 - bd.js - model

--- a/views/admin/login.hbs
+++ b/views/admin/login.hbs
@@ -8,7 +8,7 @@
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="password" placeholder="name@example.com">
+                <input type="password" class="form-control" id="password">
             
         </div>
         <button type="submit" class="btn btn-primary">ENVIAR</button>
