--- a/views/admin/layout.hbs
+++ b/views/admin/layout.hbs
@@ -2,17 +2,20 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+   
+    
+<meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PARRANDA</title>
+    <link rel="shortcut icon" href="images/icons8-musical-64.png" width="90" height="90" color="black">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstra@s.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-18mE4KWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqy12QvZ6jIW3" crossorigin="anonymuos">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/estilos.css">
-    <link rel="stylesheet" href="/fonts/style.css">
+    <link rel="stylesheet" href="/stylesheets/estilos.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/stylesheets/estilosnovedades.css">
     <link rel="stylesheet" href="/stylesheets/admin.css">
-
 
 </head>
 <body>
@@ -22,6 +25,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="images/icon-musical.png" alt="logo" width="50" height="50" margin="10">PARRANDA</a>
+        
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -38,7 +42,7 @@
 {{{body}}}
 <footer class="footer">
         <p>
-            <span class="icon-code"> Diseñado por Gudalupe Tulian</span></p>
+            <span class="icon-code"> Diseñado por Guadalupe Tulian</span></p>
 
         <a href="https://es-la.facebook.com/"><span class="icon-facebook"></span></a>
 
