--- a/views/admin/login.hbs
+++ b/views/admin/login.hbs
@@ -1,18 +1,21 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <form action="">
+            <form action="/admin/login" method="post">
             <div class="mb-3">
                 <label for="usuario" class="form-label">Usuario</label>
-                <input type="text" class="form-control" id="usuario" placeholder="name@example.com">
+                <input type="text" class="form-control" id="usuario" placeholder="name@example.com"
+                 name="usuario">
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="password">
+                <input type="password" class="form-control" id="password" name="passsword">
             
         </div>
         <button type="submit" class="btn btn-primary">ENVIAR</button>
         </form>
+        {{#if error}}
+    <p>USUARIO Y/O CONSTRASEÑA INCORRECTOS</p>
         </div>
 
     </div>
